install python-is-python3

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -19,6 +19,7 @@
           - 'fail2ban'
           - 'git'
           - 'gnutls-bin'
+          - 'python-is-python3'
           - 'sssd'
           - 'ssl-cert'
           - 'wget'
