--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -12,6 +12,7 @@
     - name: apt Install Common Packages
       apt:
         name:
+          - 'autoconf'
           - 'autofs'
           - 'build-essential'
           - 'curl'
@@ -19,6 +20,10 @@
           - 'fail2ban'
           - 'git'
           - 'gnutls-bin'
+          - 'libfuse3-dev'
+          - 'libglib2.0-dev'
+          - 'libseccomp-dev'
+          - 'libtool-bin'
           - 'python-is-python3'
           - 'python3-pip'
           - 'python3-virtualenv'
