Install libs for building samtools

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -20,8 +20,11 @@
           - 'fail2ban'
           - 'git'
           - 'gnutls-bin'
+          - 'libbz2-dev'
           - 'libfuse3-dev'
           - 'libglib2.0-dev'
+          - 'liblzma-dev'
+          - 'libncurses-dev'
           - 'libseccomp-dev'
           - 'libtool-bin'
           - 'python-is-python3'
