--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -15,6 +15,7 @@
           - 'build-essential'
           - 'curl'
           - 'dhcpcd5'
+          - 'emacs-gtk'
           - 'fail2ban'
           - 'git'
           - 'gnutls-bin'
@@ -32,6 +33,7 @@
           - 'ssl-cert'
           - 'wget'
           - 'sqlite3'
+          - 'unzip'
 
         state: latest
         update_cache: yes
