--- a/roles/admin_users/tasks/main.yml
+++ b/roles/admin_users/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 - name: Add users and groups
   tags: admin_users
+  become: yes
+  become_user: root
   block:
     - name: Add groups
       group:
@@ -22,7 +24,7 @@
         group: "{{ item.username }}"
         groups: "{{ item.username }}"
         append: yes
-        home: "/home/{{ item.username }}"
+        home: "/users/{{ item.username }}"
         skeleton: /etc/skel
         generate_ssh_key: no
         shell: /bin/bash
@@ -47,7 +49,7 @@
 
     - name: Ensure homes are secure by default
       file:
-        path: "/home/{{ item.username }}"
+        path: "/users/{{ item.username }}"
         mode: "u=rwx,g=,o="
       with_items:
         - "{{ admin_users }}"
@@ -74,6 +76,12 @@
       with_items: "{{ admin_users }}"
       loop_control:
         label: "{{ item.username }}"
+
+    - name: Make sure we have a 'docker' group
+      when: docker_install is defined and docker_install
+      group:
+        name: docker
+        state: present
 
     - name: Add user to 'docker' group
       when: docker_install is defined and docker_install
