--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -4,6 +4,8 @@
 - name: Configure basic stuff
   tags:
     - base
+  become: yes
+  become_user: root
   block:
     - name: Update timezone
       file:
@@ -21,10 +23,15 @@
       delay: 15
       until: apt_res is success
 
+    - name: Check that the reboot-required exists
+      stat:
+        path: /var/run/reboot-required
+      register: reboot_required
+
     - name: Reboot the machine
       reboot:
         post_reboot_delay: 120
-      when: reboot_after_update == "yes"
+      when: reboot_after_update == "yes" and reboot_required.stat.exists
 
     - name: Ensure fail2ban is installed
       apt:
