--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -22,11 +22,18 @@
           - 'git'
           - 'gnutls-bin'
           - 'libbz2-dev'
+          - 'libffi-dev'
+          - 'libc6-dev'
+          - 'libcurl4-openssl-dev'
           - 'libfuse3-dev'
+          - 'libgdbm-dev'
           - 'libglib2.0-dev'
           - 'liblzma-dev'
           - 'libncurses-dev'
+          - 'libreadline-dev'
           - 'libseccomp-dev'
+          - 'libsqlite3-dev'
+          - 'libssl-dev'
           - 'libtool-bin'
           - 'python-is-python3'
           - 'python3-pip'
@@ -160,3 +167,11 @@
           path: /etc/profile.d/lmod.sh
           line: "export MODULEPATH=/software/modules:$MODULEPATH"
           insertafter: EOF
+
+#- name: Make sure python and java modules are loaded by default
+#  tags: python_and_java
+#  become: yes
+#  lineinfile:
+#    path: /etc/profile.d/lmod.sh
+#    line: "module load python java"
+#    insertafter: EOF
