--- a/roles/workshop-user/handlers/main.yml
+++ b/roles/workshop-user/handlers/main.yml
@@ -1,6 +1,7 @@
 ---
 # handlers file for roles/base
 - name: Restart SSH Service
+  become: yes
   ansible.builtin.service:
     name: sshd
     state: restarted
