--- a/roles/storage/tasks/mount.yaml
+++ b/roles/storage/tasks/mount.yaml
@@ -31,8 +31,8 @@
         - name: Ensure mount directory {{ mount_point }} exists
           file:
             path: "{{ mount_point }}"
-            owner: root
-            group: root
+            owner: "{{ ansible_user }}"
+            group: "{{ ansible_user }}"
             mode: 'u=rwx,g=rx,o=rx'
             state: directory
         - name: Mount {{ mount_point }}
