--- a/roles/workshop-user/tasks/main.yml
+++ b/roles/workshop-user/tasks/main.yml
@@ -16,6 +16,8 @@
         - "{{ workshop_users }}"
       loop_control:
         label: "{{ item.username }}"
+      register: create_users_loop
+
 
     - name: Ensure homes are secure by default
       file:
@@ -36,6 +38,25 @@
         - "{{ workshop_users }}"
       loop_control:
         label: "{{ item.username }}"
+
+    - name: 'Create jupyter_user group'
+      when: jupyter_install is defined and jupyter_install
+      group:
+        name: jupyter_user
+        state: present
+
+
+    - name: Add user to 'jupyter_user' group
+      when: jupyter_install is defined and jupyter_install
+      user:
+        name: "{{ item.username }}"
+        groups: jupyter_user
+        append: yes
+      with_items:
+        - "{{ workshop_users }}"
+      loop_control:
+        label: "{{ item.username }}"
+
 
 
     - name: Update SSH server configuration to allow password authentication
