Update and fix rstudio

--- a/roles/rstudio/handlers/main.yml
+++ b/roles/rstudio/handlers/main.yml
@@ -1,3 +1,8 @@
 #SPDX-License-Identifier: MIT-0
 ---
 # handlers file for rstudio
+
+- name: Restart rstudio
+  service:
+    name: rstudio-server
+    state: restarted
